--- a/src/app/views/layout/layout.component.html
+++ b/src/app/views/layout/layout.component.html
@@ -1,2 +1,4 @@
-<p>layout works!</p>
+<button type="button" class="btn btn-secondary" (click)="logout()">
+  Logout
+</button>
 <router-outlet></router-outlet>
