--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+.center-align {
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+.input-group > .custom-select:not(:last-child),
+.input-group > .form-control:not(:last-child) {
+  border-top-right-radius: initial;
+  border-bottom-right-radius: initial;
+}
