--- a/src/app/views/layout/layout.component.html
+++ b/src/app/views/layout/layout.component.html
@@ -1,30 +1,10 @@
-<div class="row">
-  <button
-    type="button"
-    class="col-md-1 float-right btn btn-secondary"
-    (click)="logout()"
-  >
-    Logout
-  </button>
+<div class="container-fluid">
+  <app-header></app-header>
 </div>
-<div class="row">
-  <div class="col-md-2">
-    <div>
-      <a
-        [routerLink]="['/user/user-stories']"
-        routerLinkActive="router-link-active"
-        >Stories</a
-      >
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <router-outlet></router-outlet>
     </div>
-    <div *ngIf="!canEditStatus">
-      <a
-        [routerLink]="['/user/user-stories/add']"
-        routerLinkActive="router-link-active"
-        >Add Story</a
-      >
-    </div>
-  </div>
-  <div class="col-md-10">
-    <router-outlet></router-outlet>
   </div>
 </div>
