move toggle button to shared

--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -25,7 +25,8 @@
       >Add Story</a
     >
   </div>
-  <div class="col-md-1 col-sm-12 offset-md-6">
+  <div class="col-md-3 col-sm-12 offset-md-4">
+    <a class="default-nav-item" routerLink="#"> Logged in as {{ role }} </a>
     <a
       routerLinkActive="router-link-active"
       (click)="logout()"
