--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@ body {
   background-color: #edf2f3;
   font-family: "Lato";
   color: #104973;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1;
+  letter-spacing: normal;
 }
 .invalid-feedback {
   color: #c92a42;
