--- a/src/app/shared/toggle-button/toggle-button.component.scss
+++ b/src/app/shared/toggle-button/toggle-button.component.scss
@@ -39,11 +39,11 @@
 }
 
 input:checked + .slider {
-  background-color: #2196f3;
+  background-color: #268fdd;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196f3;
+  box-shadow: 0 0 1px #268fdd;
 }
 
 input:checked + .slider:before {
