fix 'logged in as' label bug

--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -26,7 +26,7 @@
     >
   </div>
   <div class="col-md-3 col-sm-12 offset-md-4">
-    <a class="default-nav-item" routerLink="#"> Logged in as {{ role }} </a>
+    <a class="default-nav-item" link="#"> Logged in as {{ role }} </a>
     <a
       routerLinkActive="router-link-active"
       (click)="logout()"
