improve sort direction implementation

--- a/src/app/views/user-story/add-user-story/add-user-story.component.html
+++ b/src/app/views/user-story/add-user-story/add-user-story.component.html
@@ -1,6 +1,6 @@
 <div class="col-md-6">
   <h5>Add new Story</h5>
-  <form [formGroup]="storyForm" (ngSubmit)="onStoryModified()" *ngIf="!loading">
+  <form [formGroup]="storyForm" (ngSubmit)="onStoryModified()" *ngIf="!loading" class="form">
     <div class="row">
       <div class="col-sm-12">
         <div class="form-group">
