--- a/src/app/views/user-story/list-user-story/list-user-story.component.scss
+++ b/src/app/views/user-story/list-user-story/list-user-story.component.scss
@@ -18,11 +18,14 @@
 .table td {
   border-top: none;
   border-bottom: 1px solid #c8ced3;
+  font-size: 0.875rem;
 }
 tr:hover {
   opacity: 0.8;
 }
-
+.table thead {
+  color: #104973;
+}
 .table-item-summary {
   width: 25%;
 }
@@ -38,8 +41,13 @@ tr:hover {
   cursor: pointer;
 }
 .sort-direction {
-  font-size: 25px;
+  background-color: #fff;
+  font-size: 18px;
   position: absolute;
   left: 97%;
-  top: 50%;
+  top: 35%;
+  padding: 8px 5px 5px 5px;
+}
+.sort-direction:active {
+  margin: 2px;
 }
