fix list sort issues
fix list sort issues

--- a/src/app/views/user-story/list-user-story/list-user-story.component.scss
+++ b/src/app/views/user-story/list-user-story/list-user-story.component.scss
@@ -46,7 +46,7 @@ tr:hover {
   position: absolute;
   left: 97%;
   top: 35%;
-  padding: 8px 5px 5px 5px;
+  padding: 8px 5px;
 }
 .sort-direction:active {
   margin: 2px;
