fix build warnings

--- a/src/app/views/user-story/list-user-story/list-user-story.component.html
+++ b/src/app/views/user-story/list-user-story/list-user-story.component.html
@@ -3,7 +3,7 @@
     <div class="col-md-2 col-sm-12">
       <strong><h4>Stories</h4></strong>
     </div>
-    <div class="col-md-4 col-sm-12">
+    <div class="col-md-4 col-sm-12 story-filter-section">
       <label> Filter By Story type</label>
       <select
         [(ngModel)]="filterByTypeString"
