--- a/src/app/views/user-story/add-user-story/add-user-story.component.html
+++ b/src/app/views/user-story/add-user-story/add-user-story.component.html
@@ -1,6 +1,11 @@
 <div class="col-md-6">
   <h5>Add new Story</h5>
-  <form [formGroup]="storyForm" (ngSubmit)="onStoryModified()" *ngIf="!loading" class="form">
+  <form
+    [formGroup]="storyForm"
+    (ngSubmit)="onStoryModified()"
+    *ngIf="!loading"
+    class="form"
+  >
     <div class="row">
       <div class="col-sm-12">
         <div class="form-group">
@@ -144,6 +149,7 @@
           <label for="cost">Status</label>
           <input
             type="text"
+            disabled
             value="{{ story.status || 'pending' }}"
             class="form-control"
           />
